<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="188dp"
        android:layout_marginLeft="188dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="189dp"
        android:layout_marginRight="189dp"
        android:layout_marginBottom="8dp"
        android:text="@string/stringmiles"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:typeface="monospace"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toTopOf="@+id/editTextMiles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextMiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginLeft="99dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="99dp"
        android:layout_marginRight="99dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/stringenter_number_1"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginEnd="300dp"
        android:layout_marginRight="300dp"
        android:layout_marginBottom="5dp"
        android:text="@string/stringkilometers"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:typeface="monospace"
        app:fontFamily="monospace"
        app:layout_constraintBottom_toTopOf="@+id/editTextKm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toEndOf="@+id/editTextKm"
        app:layout_constraintTop_toBottomOf="@+id/editTextMiles" />

    <EditText
        android:id="@+id/editTextKm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginLeft="99dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="99dp"
        android:layout_marginRight="99dp"
        android:layout_marginBottom="88dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/stringenter_number_1"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/buttonConvMilestoKm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:targetApi="o" />

<Button
    android:id="@+id/buttonConvKmtoMiles"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="116dp"
    android:layout_marginLeft="116dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="117dp"
    android:layout_marginRight="117dp"
    android:layout_marginBottom="141dp"
    android:text="@string/stringconvert_km_to_miles"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/buttonConvMilestoKm" />

<Button
    android:id="@+id/buttonConvMilestoKm"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="116dp"
    android:layout_marginLeft="116dp"
    android:layout_marginEnd="117dp"
    android:layout_marginRight="117dp"
    android:layout_marginBottom="34dp"
    android:text="@string/stringconvert_miles_to_km"
    app:layout_constraintBottom_toTopOf="@+id/buttonConvKmtoMiles"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editTextKm" />
</androidx.constraintlayout.widget.ConstraintLayout>